Increased spacing on DiseasePlatforms. Removed # of files added in month from FilesByDate

--- a/css/main.css
+++ b/css/main.css
@@ -20,12 +20,12 @@ body {
 
 .link {
   fill : none;
-  stroke : #ccc;
+  stroke : #aaa;
   stroke-width : 1.5px;
 }
 
 text.nodeLabel {
-  fill : #777;
+  fill : black;
 }
 
 .active {
